# student-management-fastapi

./: 01_sqlite.py  README.md  database.py  models.py  pydantic_models.py  pyproject.toml  student_form.db
